--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/scripts/slick.css"/>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/scripts/jquery.fullPage.css">
+    <link rel="shortcut icon" href="/images/data-collab-logo.png" type="image/x-icon">
     <script src="https://use.typekit.net/mvc3cdb.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
